<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TobaccoFree</string>
    <string name="app_version">1.9.1</string>
    <string name="app_version_string">ver. 1.9.1</string>
    
    <string name="new_observation">Record new data</string>
    <string name="existing_observations">Stored data</string>
    <string name="finish_observation">Finish</string>
    <string name="help">Help</string>
    <string name="no_other_occupants">No Occupants</string>
    <string name="other_adults">Other Adults</string>
    <string name="child">Child</string>
    <string name="getting_gps">Retrieving GPS location...</string>
    <string name="no_smoking">Non Smokers</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="gps_error_gps">The GPS is required to determine the location of the observation and needs to be turned on. Turn on GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
	<string name="confirm_close">Are you sure you want to finish this observation?</string>
	<string name="confirm_title">Are you sure?</string>
	<string name="gps_fix">A GPS fix must be acquired, please wait.</string>
	<string name="save">Save</string>
	<string name="no_smokers">Non smokers</string>
    <string name="adult_smoker">Adult smoker</string>
    <string name="adult_with_others">Adult smoker with others</string>
    <string name="child_smoking">Child smoking</string>
    <string name="total">Total</string>
    <string name="btnRegister">Sign up</string>
    <string name="btnSaveCredentials">Save credentials</string>
    <string name="user_account_settings">User account settings</string>
    <string name="export_all">Export All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="export_selected">Export Selected</string>
    <string name="delete_all">Delete All</string>
    <string name="ok">Ok</string>
    <string name="select_observation">Select Observation</string>
    <string name="nosd_title">No SD Card</string>
    <string name="nosd_message">An SD card is required to export to CSV. Please insert a SD card and make sure that it is mounted.</string>
   	<string name="dir_error_title">Error</string>
   	<string name="dir_error_message">Failed to create \'tobaccofree\' directory on the SD card. Is the SD card read only?</string>
   	<string name="export_success">Exporting CSV to external SD card is complete</string>
   	<string name="success_title">Success</string>
   	<string name="upload_success">Upload of the data to TobaccoFree website completed.</string>
   	<string name="unknown_error_title">Unknown Error</string>
   	<string name="unknown_error_message">An unknown error as occurred.</string>
   	<string name="warning">Warning</string>
   	<string name="delete_warning_all">Are you sure you want to delete all observations? This cannot be undone.</string>
   	<string name="delete_warning_selected">Are you sure you want to delete the selected observation? This cannot be undone.</string>
   	<string name="play_sound">Play Sound</string>
   	<string name="play_sound_description">Play sound when incrementing a count</string>
   	<string name="preferences">Preferences</string>
   	<string name="left_handed_description">Change the observation layout to left handed</string>
   	<string name="left_handed">Left Handed Mode</string>
   	<string name="email_selected">E-mail Selected</string>
   	<string name="email_all">E-mail All</string>
   	<string name="title">Smoking Monitor</string>
   	<string name="sub_title">counting smoking in cars</string>
   	<string name="view_instructions">View Instructions</string>
   	<string name="practice_mode">Practice Mode</string>
   	<string name="sound_off">Turn Sound Off</string>
   	<string name="sound_on">Turn Sound On</string>
   	<string name="email_support">Give us Feedback</string>
   	<string name="email_data">Email Data</string>
   	<string name="send_feedback">Send us feedback:</string>
   	<string name="instuctions_choosing_title">Choosing an observation site</string>
   	<string name="instructions_choosing_text">The ideal site will have high vehicle flows (but low vehicle speed) and good visibility of vehicle occupants.</string>
   	<string name="instructions_what_title">What to observe</string>
   	<string name="instructions_what_text">Smoking in vehicles and the presence of other (adult or child) occupants</string>
   	<string name="instructions_how_title">How to observe</string>
   	<string name="instructions_how_text">Only include vehicles in the lane of traffic nearest to you. For each vehicle, tap one of the following buttons:</string>
   	<string name="instructions_no_smoking">No smoking.</string>
   	<string name="instructions_sole">Smoking but smoker is <b>sole</b> occupant</string>
   	<string name="instructions_adult_passenger">Smoking and other <b>adult</b> passengers.</string>
   	<string name="instructions_child">Smoking and <b>child</b> passenger(s) (in a car seat or under 12 years of age). Also press this button if there are other adult passenger(s) <b>together</b> with the child passenger(s).</string> 
   	<string name="instructions_how_sub_title">For vehicles with smoking:</string> 
   	<string name="instructions_what_not_title">What not to observe</string> 
   	<string name="instructions_what_not_text">Vehicles that are difficult to see inside eg. due to window tinting.</string> 
   	<string name="instructions_when_title">When to observe</string> 
   	<string name="instructions_when_text">During peak traffic (eg, 7:30-9:30 and 16:00-18:00).</string> 
   	<string name="instructions_practice_title">Want to practice?</string> 
   	<string name="instructions_practice_text">Record some data and then delete it instead of uploading to the server.</string> 
   	<string name="instructions_mistake">To correct a mistake, any of the above four buttons can be held down, which will subtract on observation from that category.</string>
   	<string name="subtract_one">Subtract 1</string>
   	<string name="context_child">Child Passenger</string>
   	<string name="context_others">Adult Passengers</string>
   	<string name="context_lone">No Passengers</string>
   	<string name="context_no_smoking">No Smoking</string>
   	<string name="context_default">Options</string>
   	<string name="failed_decrement">Failed to decrement value</string>
   	<string name="preference_button">Preferences</string>
   	<string name="upload_data">Upload data</string>
   	<string name="set_username">Account Details</string>
   	<string name="no_md5">Sorry your device has insufficient version. Please upgrade.</string>
   	<string name="no_username_set">Please set your email and password in the preferences screen</string>
   	<string name="error">Error</string>
   	<string name="email">E-Mail</string>
   	<string name="password">Password</string>
   	<string name="cancel">Cancel</string>
   	<string name="enter_details">Enter Your Details</string>
   	<string name="no_internet">An Internet connection (2/3G or WiFi) is required to upload data</string>
   	<string name="uploading_observation_number">Uploading observation </string>
   	<string name="uploading_observation_of">of </string>
   	<string name="username_details">An email and password are required to use the uploading function of this application. To setup new account press the button above and sign up.</string>
   	<string name="upload_description">To upload your observations press \'Upload data\' button on the main screen of TobaccoFree. App will upload all observations that haven\'t been upload yet.</string>
   	<string name="instructions_upload">How to Upload</string>
   	<string name="upload_error">An error has occurred while uploading. If this continues please use the feedback button in the Preferences menu.</string>
	<string name="right_hand">Right Handed Mode</string>
	<string name="stats">Statistics</string>
	<string name="update_stats">Update</string>
	<string name="view_map">View Map</string>
	<string name="street_view">Street View</string>
	<string name="close">Close</string>
	<string name="adult">Adult Smoker</string>
	<string name="no_internet_update">An Internet connection (2/3G or WiFi) is required to update data</string>
	<string name="startDialog">Start Time</string>
	<string name="finish_dialog">Finish Time</string>
	<string name="duration_dialog">Duration</string>
	<string name="updating">Updating</string>
</resources>