<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" 
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:enabled="false"
            android:text="@string/finish_observation" />

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/help" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnNoSmoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTop="@drawable/nosmoking"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/no_smoking" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnNoOccupants"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/no_other_occupants" />

        <Button
            android:id="@+id/btnOtherAdults"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/other_adults" />

        <Button
            android:id="@+id/btnChild"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/child" />
    </LinearLayout>

</LinearLayout>