<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="5dip"        
        android:background="@drawable/button_selector"
        android:text="@string/new_observation"
        android:textSize="19dip"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnExisting"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_selector"
        android:text="@string/existing_observations"
        android:textSize="19dip"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_selector"
        android:enabled="true"
        android:text="@string/upload_data"
        android:textSize="19dip"
        android:textStyle="bold"
        android:typeface="monospace" />
    
    <Button
        android:id="@+id/btnPreferences"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dip"
        android:background="@drawable/button_selector"
        android:text="@string/preference_button"
        android:textSize="19dip"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnStats"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dip"
        android:background="@drawable/button_selector"
        android:text="@string/stats"
        android:textSize="19dip"
        android:textStyle="bold"
        android:typeface="monospace" />
    
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dip"
    	android:gravity="left"
    	android:orientation="horizontal" >
    
    	<ImageView
    	    android:paddingLeft="15dip"
        	android:layout_width="160dip"
        	android:layout_height="80dip"
        	android:layout_gravity="left"
        	android:src="@drawable/otago_horizontal" />    

    	<LinearLayout 
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:orientation="vertical">
    	    
    		<ImageView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/ic_launcher" />

    		    <TextView
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:text="@string/app_version_string"
        			android:textAppearance="?android:attr/textAppearanceLarge"
        			android:textSize="15sp"
        			android:textStyle="bold" />
    			    	    
    	</LinearLayout>
    	
    </LinearLayout>
    
</LinearLayout>