<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btnViewInstuctions"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/view_instructions"
            android:textSize="16dip"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnLeftRightMode"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:enabled="true"
            android:text="@string/left_handed"
            android:textSize="16dip"
            android:textStyle="bold"
            android:typeface="monospace" />
<!-- 
        <Button
            android:id="@+id/btnPractice"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:enabled="true"
            android:text="@string/practice_mode"
            android:textSize="16dip"
            android:textStyle="bold"
            android:typeface="monospace" />
 -->
        <Button
            android:id="@+id/btnSound"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/sound_off"
            android:textSize="16dip"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnUsername"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:enabled="true"
            android:text="@string/set_username"
            android:textSize="16dip"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnEmailSupport"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/email_support"
            android:textSize="16dip"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>